genson-cli/tests/snapshots/map_max_required_keys_snapshots__normalized_max_rk_two.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - two_required:
        common1: always
        common2: present
        varies: sometimes
    - two_required:
        common1: always
        common2: present
        other: value
    - three_required:
        stable1: always
        stable2: present
        stable3: here
        varies: sometimes
    - three_required:
        stable1: always
        stable2: present
        stable3: here
        other: value
---
[
  {
    "two_required": {
      "common1": "always",
      "common2": "present",
      "varies": "sometimes"
    },
    "three_required": null
  },
  {
    "two_required": {
      "common1": "always",
      "common2": "present",
      "other": "value"
    },
    "three_required": null
  },
  {
    "two_required": null,
    "three_required": {
      "stable1": "always",
      "stable2": "present",
      "stable3": "here",
      "varies": "sometimes",
      "other": null
    }
  },
  {
    "two_required": null,
    "three_required": {
      "stable1": "always",
      "stable2": "present",
      "stable3": "here",
      "varies": null,
      "other": "value"
    }
  }
]
