genson-cli/tests/snapshots/map_max_required_keys_snapshots__normalized_max_rk_zero.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - fully_optional:
        sometimes: here
        other: maybe
    - fully_optional:
        different: keys
    - has_required:
        always: present
        sometimes: here
    - has_required:
        always: present
        other: value
---
[
  {
    "fully_optional": {
      "sometimes": "here",
      "other": "maybe"
    },
    "has_required": null
  },
  {
    "fully_optional": {
      "different": "keys"
    },
    "has_required": null
  },
  {
    "fully_optional": null,
    "has_required": {
      "always": "present",
      "sometimes": "here",
      "other": null
    }
  },
  {
    "fully_optional": null,
    "has_required": {
      "always": "present",
      "sometimes": null,
      "other": "value"
    }
  }
]
