genson-cli/tests/snapshots/map_max_required_keys_snapshots__normalized_progression_rk0.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: norm0
---
[
  {
    "data": {
      "always1": "val1",
      "always2": "val2",
      "sometimes": "val3",
      "other": null
    }
  },
  {
    "data": {
      "always1": "val4",
      "always2": "val5",
      "sometimes": null,
      "other": null
    }
  },
  {
    "data": {
      "always1": "val6",
      "always2": "val7",
      "sometimes": null,
      "other": "val8"
    }
  }
]
