genson-cli/tests/snapshots/map_max_required_keys_snapshots__normalized_progression_rk1.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - data:
        always1: val1
        always2: val2
        sometimes: val3
    - data:
        always1: val4
        always2: val5
    - data:
        always1: val6
        always2: val7
        other: val8
---
[
  {
    "data": {
      "always1": "val1",
      "always2": "val2",
      "sometimes": "val3",
      "other": null
    }
  },
  {
    "data": {
      "always1": "val4",
      "always2": "val5",
      "sometimes": null,
      "other": null
    }
  },
  {
    "data": {
      "always1": "val6",
      "always2": "val7",
      "sometimes": null,
      "other": "val8"
    }
  }
]
