genson-cli/tests/snapshots/map_max_required_keys_snapshots__schema_max_rk_boundary.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - at_map_threshold:
        key1: val1
        key2: val2
    - at_map_threshold:
        key1: val3
        key2: val4
    - at_rk_limit:
        required: always
        optional: sometimes
    - at_rk_limit:
        required: always
    - over_rk_limit:
        req1: always
        req2: present
        optional: sometimes
    - over_rk_limit:
        req1: always
        req2: present
---
{
  "$schema": "http://json-schema.org/schema#",
  "properties": {
    "at_map_threshold": {
      "properties": {
        "key1": {
          "type": "string"
        },
        "key2": {
          "type": "string"
        }
      },
      "required": [
        "key1",
        "key2"
      ],
      "type": "object"
    },
    "at_rk_limit": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    },
    "over_rk_limit": {
      "properties": {
        "req1": {
          "type": "string"
        },
        "req2": {
          "type": "string"
        },
        "optional": {
          "type": "string"
        }
      },
      "required": [
        "req1",
        "req2"
      ],
      "type": "object"
    }
  },
  "type": "object"
}
