genson-cli/tests/snapshots/map_max_required_keys_snapshots__schema_max_rk_nested.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - user:
        id: 1
        name: Alice
      config:
        host: localhost
        port: "8080"
        debug: "true"
    - user:
        id: 2
        name: Bob
      config:
        host: prod.com
        port: "443"
    - user:
        id: 3
        name: Charlie
      config:
        host: test.com
        port: "3000"
        env: test
---
{
  "$schema": "http://json-schema.org/schema#",
  "properties": {
    "user": {
      "properties": {
        "id": {
          "type": "integer"
        },
        "name": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name"
      ],
      "type": "object"
    },
    "config": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    }
  },
  "required": [
    "config",
    "user"
  ],
  "type": "object"
}
