genson-cli/tests/snapshots/map_max_required_keys_snapshots__schema_max_rk_one.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - one_required:
        common: always
        varies: sometimes
    - one_required:
        common: always
        other: different
    - two_required:
        stable1: always
        stable2: present
        varies: sometimes
    - two_required:
        stable1: always
        stable2: present
        other: value
---
{
  "$schema": "http://json-schema.org/schema#",
  "properties": {
    "one_required": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    },
    "two_required": {
      "properties": {
        "stable1": {
          "type": "string"
        },
        "stable2": {
          "type": "string"
        },
        "varies": {
          "type": "string"
        },
        "other": {
          "type": "string"
        }
      },
      "required": [
        "stable1",
        "stable2"
      ],
      "type": "object"
    }
  },
  "type": "object"
}
