genson-cli/tests/snapshots/map_max_required_keys_snapshots__schema_max_rk_two.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - two_required:
        common1: always
        common2: present
        varies: sometimes
    - two_required:
        common1: always
        common2: present
        other: value
    - three_required:
        stable1: always
        stable2: present
        stable3: here
        varies: sometimes
    - three_required:
        stable1: always
        stable2: present
        stable3: here
        other: value
---
{
  "$schema": "http://json-schema.org/schema#",
  "properties": {
    "two_required": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    },
    "three_required": {
      "properties": {
        "stable1": {
          "type": "string"
        },
        "stable2": {
          "type": "string"
        },
        "stable3": {
          "type": "string"
        },
        "varies": {
          "type": "string"
        },
        "other": {
          "type": "string"
        }
      },
      "required": [
        "stable1",
        "stable2",
        "stable3"
      ],
      "type": "object"
    }
  },
  "type": "object"
}
