genson-cli/tests/snapshots/map_max_required_keys_snapshots__schema_max_rk_zero.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - fully_optional:
        sometimes: here
        other: maybe
    - fully_optional:
        different: keys
    - has_required:
        always: present
        sometimes: here
    - has_required:
        always: present
        other: value
---
{
  "$schema": "http://json-schema.org/schema#",
  "properties": {
    "fully_optional": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    },
    "has_required": {
      "properties": {
        "always": {
          "type": "string"
        },
        "sometimes": {
          "type": "string"
        },
        "other": {
          "type": "string"
        }
      },
      "required": [
        "always"
      ],
      "type": "object"
    }
  },
  "type": "object"
}
